--- a/perfect-number-http-java/pom.xml
+++ b/perfect-number-http-java/pom.xml
@@ -24,8 +24,7 @@
         <dependency>
             <groupId>org.example</groupId>
             <artifactId>perfect-number</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
+            <version>0.0.1</version>
         </dependency>
     </dependencies>
 </project>
